wrapper.h

bool km_mem_read(const void* address, void* buffer, size_t len);
typedef struct {
    void* handle;
    uintptr_t address;
    size_t size;
    bool valid;
} km_patch_t;
typedef enum {
    KM_ASM_ARM32 = 0,
    KM_ASM_ARM64 = 1,
    KM_ASM_X86 = 2,
    KM_ASM_X86_64 = 3
} km_asm_arch_t;
km_patch_t km_patch_create_bytes(uintptr_t address, const void* bytes, size_t size);
km_patch_t km_patch_create_hex(uintptr_t address, const char* hex);
km_patch_t km_patch_create_asm(uintptr_t address, km_asm_arch_t arch, const char* asm_code, uintptr_t asm_address);
bool km_patch_modify(km_patch_t* patch);
bool km_patch_restore(km_patch_t* patch);
void km_patch_free(km_patch_t* patch);
char* km_patch_get_curr_bytes(km_patch_t* patch);
char* km_patch_get_orig_bytes(km_patch_t* patch);
char* km_patch_get_patch_bytes(km_patch_t* patch);
typedef struct {
    void* handle;
    uintptr_t address;
    size_t size;
    bool valid;
} km_backup_t;
km_backup_t km_backup_create(uintptr_t address, size_t size);
bool km_backup_restore(km_backup_t* backup);
void km_backup_free(km_backup_t* backup);
char* km_backup_get_curr_bytes(km_backup_t* backup);
char* km_backup_get_orig_bytes(km_backup_t* backup);
uintptr_t km_find_bytes_first(uintptr_t start, uintptr_t end, const char* bytes, const char* mask);
uintptr_t km_find_hex_first(uintptr_t start, uintptr_t end, const char* hex, const char* mask);
uintptr_t km_find_pattern_first(uintptr_t start, uintptr_t end, const char* pattern);
uintptr_t km_find_data_first(uintptr_t start, uintptr_t end, const void* data, size_t size);
size_t km_find_bytes_all(uintptr_t start, uintptr_t end, const char* bytes, const char* mask, uintptr_t** results);
size_t km_find_hex_all(uintptr_t start, uintptr_t end, const char* hex, const char* mask, uintptr_t** results);
size_t km_find_pattern_all(uintptr_t start, uintptr_t end, const char* pattern, uintptr_t** results);
size_t km_find_data_all(uintptr_t start, uintptr_t end, const void* data, size_t size, uintptr_t** results);
void km_free_results(uintptr_t* results);
typedef struct {
    void* handle;
    bool valid;
} km_elf_scanner_t;
typedef struct {
    void* handle;
} km_ptr_validator_t;
km_ptr_validator_t km_validator_create(void);
void km_validator_set_cache(km_ptr_validator_t* validator, bool use_cache);
bool km_validator_is_readable(km_ptr_validator_t* validator, uintptr_t ptr, size_t len);
bool km_validator_is_writable(km_ptr_validator_t* validator, uintptr_t ptr, size_t len);
bool km_validator_is_executable(km_ptr_validator_t* validator, uintptr_t ptr, size_t len);
void km_validator_free(km_ptr_validator_t* validator);
char* km_data_to_hex(const void* data, size_t len);
bool km_hex_to_data(const char* hex, void* data, size_t data_len);
char* km_hex_dump(const void* address, size_t len);
void km_free_string(char* str);
char* km_file_name_from_path(const char* file_path);
char* km_file_directory(const char* file_path);
char* km_file_extension(const char* file_path);
bool km_string_starts_with(const char* str, const char* prefix);
bool km_string_contains(const char* str, const char* substr);
bool km_string_ends_with(const char* str, const char* suffix);
char* km_string_trim(const char* str);
bool km_string_validate_hex(const char* hex);
char* km_string_fmt(const char* fmt, ...);
char* km_string_random(size_t length);
typedef struct {
    void* handle;
    int fd;
    const char* file_path;
    int flags;
    int mode;
    int error;
} km_io_file_t;
km_io_file_t km_io_file_create(const char* file_path, int flags, int mode);
km_io_file_t km_io_file_create_simple(const char* file_path, int flags);
bool km_io_file_open(km_io_file_t* file);
#define KM_PAGE_SIZE 4096