bindings.rs

/* automatically generated by rust-bindgen 0.70.1 */

pub const KM_PAGE_SIZE: u32 = 4096;
extern "C" {
    pub fn km_mem_read(
        address: *const ::std::os::raw::c_void,
        buffer: *mut ::std::os::raw::c_void,
        len: usize,
    ) -> bool;
}
#[repr(C)]
#[derive(Debug, Copy, Clone, Hash, PartialOrd, Ord, PartialEq, Eq)]
pub struct km_patch_t {
    pub handle: *mut ::std::os::raw::c_void,
    pub address: usize,
    pub size: usize,
    pub valid: bool,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of km_patch_t"][::std::mem::size_of::<km_patch_t>() - 32usize];
    ["Alignment of km_patch_t"][::std::mem::align_of::<km_patch_t>() - 8usize];
    ["Offset of field: km_patch_t::handle"][::std::mem::offset_of!(km_patch_t, handle) - 0usize];
    ["Offset of field: km_patch_t::address"][::std::mem::offset_of!(km_patch_t, address) - 8usize];
    ["Offset of field: km_patch_t::size"][::std::mem::offset_of!(km_patch_t, size) - 16usize];
    ["Offset of field: km_patch_t::valid"][::std::mem::offset_of!(km_patch_t, valid) - 24usize];
};
impl Default for km_patch_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
pub const km_asm_arch_t_KM_ASM_ARM32: km_asm_arch_t = 0;
pub const km_asm_arch_t_KM_ASM_ARM64: km_asm_arch_t = 1;
pub const km_asm_arch_t_KM_ASM_X86: km_asm_arch_t = 2;
pub const km_asm_arch_t_KM_ASM_X86_64: km_asm_arch_t = 3;
pub type km_asm_arch_t = ::std::os::raw::c_uint;
extern "C" {
    pub fn km_patch_create_bytes(
        address: usize,
        bytes: *const ::std::os::raw::c_void,
        size: usize,
    ) -> km_patch_t;
}
extern "C" {
    pub fn km_patch_create_hex(address: usize, hex: *const ::std::os::raw::c_char) -> km_patch_t;
}
extern "C" {
    pub fn km_patch_create_asm(
        address: usize,
        arch: km_asm_arch_t,
        asm_code: *const ::std::os::raw::c_char,
        asm_address: usize,
    ) -> km_patch_t;
}
extern "C" {
    pub fn km_patch_modify(patch: *mut km_patch_t) -> bool;
}
extern "C" {
    pub fn km_patch_restore(patch: *mut km_patch_t) -> bool;
}
extern "C" {
    pub fn km_patch_free(patch: *mut km_patch_t);
}
extern "C" {
    pub fn km_patch_get_curr_bytes(patch: *mut km_patch_t) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn km_patch_get_orig_bytes(patch: *mut km_patch_t) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn km_patch_get_patch_bytes(patch: *mut km_patch_t) -> *mut ::std::os::raw::c_char;
}
#[repr(C)]
#[derive(Debug, Copy, Clone, Hash, PartialOrd, Ord, PartialEq, Eq)]
pub struct km_backup_t {
    pub handle: *mut ::std::os::raw::c_void,
    pub address: usize,
    pub size: usize,
    pub valid: bool,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of km_backup_t"][::std::mem::size_of::<km_backup_t>() - 32usize];
    ["Alignment of km_backup_t"][::std::mem::align_of::<km_backup_t>() - 8usize];
    ["Offset of field: km_backup_t::handle"][::std::mem::offset_of!(km_backup_t, handle) - 0usize];
    ["Offset of field: km_backup_t::address"]
        [::std::mem::offset_of!(km_backup_t, address) - 8usize];
    ["Offset of field: km_backup_t::size"][::std::mem::offset_of!(km_backup_t, size) - 16usize];
    ["Offset of field: km_backup_t::valid"][::std::mem::offset_of!(km_backup_t, valid) - 24usize];
};
impl Default for km_backup_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
extern "C" {
    pub fn km_backup_create(address: usize, size: usize) -> km_backup_t;
}
extern "C" {
    pub fn km_backup_restore(backup: *mut km_backup_t) -> bool;
}
extern "C" {
    pub fn km_backup_free(backup: *mut km_backup_t);
}
extern "C" {
    pub fn km_backup_get_curr_bytes(backup: *mut km_backup_t) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn km_backup_get_orig_bytes(backup: *mut km_backup_t) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn km_find_bytes_first(
        start: usize,
        end: usize,
        bytes: *const ::std::os::raw::c_char,
        mask: *const ::std::os::raw::c_char,
    ) -> usize;
}
extern "C" {
    pub fn km_find_hex_first(
        start: usize,
        end: usize,
        hex: *const ::std::os::raw::c_char,
        mask: *const ::std::os::raw::c_char,
    ) -> usize;
}
extern "C" {
    pub fn km_find_pattern_first(
        start: usize,
        end: usize,
        pattern: *const ::std::os::raw::c_char,
    ) -> usize;
}
extern "C" {
    pub fn km_find_data_first(
        start: usize,
        end: usize,
        data: *const ::std::os::raw::c_void,
        size: usize,
    ) -> usize;
}
extern "C" {
    pub fn km_find_bytes_all(
        start: usize,
        end: usize,
        bytes: *const ::std::os::raw::c_char,
        mask: *const ::std::os::raw::c_char,
        results: *mut *mut usize,
    ) -> usize;
}
extern "C" {
    pub fn km_find_hex_all(
        start: usize,
        end: usize,
        hex: *const ::std::os::raw::c_char,
        mask: *const ::std::os::raw::c_char,
        results: *mut *mut usize,
    ) -> usize;
}
extern "C" {
    pub fn km_find_pattern_all(
        start: usize,
        end: usize,
        pattern: *const ::std::os::raw::c_char,
        results: *mut *mut usize,
    ) -> usize;
}
extern "C" {
    pub fn km_find_data_all(
        start: usize,
        end: usize,
        data: *const ::std::os::raw::c_void,
        size: usize,
        results: *mut *mut usize,
    ) -> usize;
}
extern "C" {
    pub fn km_free_results(results: *mut usize);
}
#[repr(C)]
#[derive(Debug, Copy, Clone, Hash, PartialOrd, Ord, PartialEq, Eq)]
pub struct km_elf_scanner_t {
    pub handle: *mut ::std::os::raw::c_void,
    pub valid: bool,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of km_elf_scanner_t"][::std::mem::size_of::<km_elf_scanner_t>() - 16usize];
    ["Alignment of km_elf_scanner_t"][::std::mem::align_of::<km_elf_scanner_t>() - 8usize];
    ["Offset of field: km_elf_scanner_t::handle"]
        [::std::mem::offset_of!(km_elf_scanner_t, handle) - 0usize];
    ["Offset of field: km_elf_scanner_t::valid"]
        [::std::mem::offset_of!(km_elf_scanner_t, valid) - 8usize];
};
impl Default for km_elf_scanner_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone, Hash, PartialOrd, Ord, PartialEq, Eq)]
pub struct km_ptr_validator_t {
    pub handle: *mut ::std::os::raw::c_void,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of km_ptr_validator_t"][::std::mem::size_of::<km_ptr_validator_t>() - 8usize];
    ["Alignment of km_ptr_validator_t"][::std::mem::align_of::<km_ptr_validator_t>() - 8usize];
    ["Offset of field: km_ptr_validator_t::handle"]
        [::std::mem::offset_of!(km_ptr_validator_t, handle) - 0usize];
};
impl Default for km_ptr_validator_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
extern "C" {
    pub fn km_validator_create() -> km_ptr_validator_t;
}
extern "C" {
    pub fn km_validator_set_cache(validator: *mut km_ptr_validator_t, use_cache: bool);
}
extern "C" {
    pub fn km_validator_is_readable(
        validator: *mut km_ptr_validator_t,
        ptr: usize,
        len: usize,
    ) -> bool;
}
extern "C" {
    pub fn km_validator_is_writable(
        validator: *mut km_ptr_validator_t,
        ptr: usize,
        len: usize,
    ) -> bool;
}
extern "C" {
    pub fn km_validator_is_executable(
        validator: *mut km_ptr_validator_t,
        ptr: usize,
        len: usize,
    ) -> bool;
}
extern "C" {
    pub fn km_validator_free(validator: *mut km_ptr_validator_t);
}
extern "C" {
    pub fn km_data_to_hex(
        data: *const ::std::os::raw::c_void,
        len: usize,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn km_hex_to_data(
        hex: *const ::std::os::raw::c_char,
        data: *mut ::std::os::raw::c_void,
        data_len: usize,
    ) -> bool;
}
extern "C" {
    pub fn km_hex_dump(
        address: *const ::std::os::raw::c_void,
        len: usize,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn km_free_string(str_: *mut ::std::os::raw::c_char);
}
extern "C" {
    pub fn km_file_name_from_path(
        file_path: *const ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn km_file_directory(
        file_path: *const ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn km_file_extension(
        file_path: *const ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn km_string_starts_with(
        str_: *const ::std::os::raw::c_char,
        prefix: *const ::std::os::raw::c_char,
    ) -> bool;
}
extern "C" {
    pub fn km_string_contains(
        str_: *const ::std::os::raw::c_char,
        substr: *const ::std::os::raw::c_char,
    ) -> bool;
}
extern "C" {
    pub fn km_string_ends_with(
        str_: *const ::std::os::raw::c_char,
        suffix: *const ::std::os::raw::c_char,
    ) -> bool;
}
extern "C" {
    pub fn km_string_trim(str_: *const ::std::os::raw::c_char) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn km_string_validate_hex(hex: *const ::std::os::raw::c_char) -> bool;
}
extern "C" {
    pub fn km_string_fmt(fmt: *const ::std::os::raw::c_char, ...) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn km_string_random(length: usize) -> *mut ::std::os::raw::c_char;
}
#[repr(C)]
#[derive(Debug, Copy, Clone, Hash, PartialOrd, Ord, PartialEq, Eq)]
pub struct km_io_file_t {
    pub handle: *mut ::std::os::raw::c_void,
    pub fd: ::std::os::raw::c_int,
    pub file_path: *const ::std::os::raw::c_char,
    pub flags: ::std::os::raw::c_int,
    pub mode: ::std::os::raw::c_int,
    pub error: ::std::os::raw::c_int,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of km_io_file_t"][::std::mem::size_of::<km_io_file_t>() - 40usize];
    ["Alignment of km_io_file_t"][::std::mem::align_of::<km_io_file_t>() - 8usize];
    ["Offset of field: km_io_file_t::handle"]
        [::std::mem::offset_of!(km_io_file_t, handle) - 0usize];
    ["Offset of field: km_io_file_t::fd"][::std::mem::offset_of!(km_io_file_t, fd) - 8usize];
    ["Offset of field: km_io_file_t::file_path"]
        [::std::mem::offset_of!(km_io_file_t, file_path) - 16usize];
    ["Offset of field: km_io_file_t::flags"][::std::mem::offset_of!(km_io_file_t, flags) - 24usize];
    ["Offset of field: km_io_file_t::mode"][::std::mem::offset_of!(km_io_file_t, mode) - 28usize];
    ["Offset of field: km_io_file_t::error"][::std::mem::offset_of!(km_io_file_t, error) - 32usize];
};
impl Default for km_io_file_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
extern "C" {
    pub fn km_io_file_create(
        file_path: *const ::std::os::raw::c_char,
        flags: ::std::os::raw::c_int,
        mode: ::std::os::raw::c_int,
    ) -> km_io_file_t;
}
extern "C" {
    pub fn km_io_file_create_simple(
        file_path: *const ::std::os::raw::c_char,
        flags: ::std::os::raw::c_int,
    ) -> km_io_file_t;
}
extern "C" {
    pub fn km_io_file_open(file: *mut km_io_file_t) -> bool;
}
